client/src/ui/atoms/logo/index.scss
@use "../../minimalist/vars/_layout.scss" as layout;
@use "../../theme/index" as theme;

.logo {
  display: flex;
  height: 32px;
  width: 116.35px;

  @media #{layout.$mq-small-desktop-and-up} {
    height: 65px;
    width: 200px;
  }

  @media #{layout.$mq-large-desktop-and-up} {
    flex-basis: 200px;
    position: relative;
    top: -2px;
  }
}

